# dEdxRecon

./: .gitignore  Analysis.cxx  CMakeLists.txt  Doxyfile  README.md  run.sh
App/: App.cxx  CMakeLists.txt
Apps/: Analysis.cxx  DrawOut.cxx  README.md
Code/: setup.sh
Code/.gen/: dictgen.mk  gen.mk
Code/AOBt/: module.mk
Code/Analysis/: module.mk
Code/AnalysisTools/: module.mk
Code/Analysis_JF/: module.mk
Code/Analysis_SH/: module.mk
Code/Analysis_TD/: module.mk
Code/EvtModel/: module.mk
Code/EvtModelTools/: module.mk
Code/Fitters/: module.mk
Code/Fitters_Cluster/: module.mk
Code/Fitters_Sample/: module.mk
Code/Fitters_Track/: module.mk
Code/GenerateShape/: module.mk
Code/JeanFrancois/: module.mk
Code/MTools/: Makefile  depgen_f90.pl  g95.mk  genmak.sh  gfortran.mk  guess_architecture.sh  linuxx8664gcc.mk  macosx.mk  makelist  module.mk  mtcernlib  pgf90.mk  setupmtools.sh  showincludes  win32.mk
Code/Misc/: module.mk
Code/PID/: dict_PID.cc  module.mk
Code/Procedures/: module.mk
Code/Samira/: module.mk
Code/SampleTools/: dict_SampleTools.cc  module.mk
Code/SignalModel/: module.mk
Code/SignalShape/: module.mk
Code/Simulation/: module.mk
Code/Studies/: module.mk
Code/Tristan/: module.mk
Code/Tristan_DESY21/: module.mk
EvtModel/: CMakeLists.txt
EvtModel/inc/: AmplitudeError.h  Cluster.h  Event.h  FitOutput.h  Pad.h  Sample.h  TimeError.h  Track.h
EvtModel/src/: AmplitudeError.cxx  Cluster.cxx  Event.cxx  FitOutput.cxx  Module.cxx  Pad.cxx  ROBoard.cxx  Sample.cxx  TimeError.cxx  Track.cxx
EvtModelTools/: CMakeLists.txt
EvtModelTools/inc/: EvtModelTools_Histos.h  EvtModelTools_JFL_Histos.h  EvtModelTools_TD_Histos.h  EvtModelTools_TD_Selections.h  JFL_Do_ClusterFit.h  JFL_Selections.h  JFL_Selector.h
EvtModelTools/src/: EvtModelTools_Histos.cxx  EvtModelTools_JFL_Histos.cxx  EvtModelTools_TD_Histos.cxx  EvtModelTools_TD_Selections.cxx  JFL_Do_ClusterFit.cxx  JFL_Selections.cxx  JFL_Selector.cxx  JeanFrancois_DrawOut_Status.cxx
Fitters/: CMakeLists.txt  README.md
Fitters/inc/: ClusterFitter.h  DoTracksReconstruction.h  PRFParameters.h  PRF_param.h  TheFitterCluster_PV0_Diag.h  TheFitterCluster_PV0_PV1.h  TheFitterTrack.h  TrackFitter.h  TrackRecon.h
Fitters/src/: ClusterFitter.cxx  DoTracksReconstruction.cxx  PRFParameters.cxx  PRF_param.cxx  TheFitterCluster_PV0_Diag.cxx  TheFitterCluster_PV0_PV1.cxx  TheFitterTrack.cxx  TrackFitter.cxx  TrackRecon.cxx
GainRCMaps/: Readme.txt
GainRCMaps/Gainfiles/: ERAM01_Gaindata.root  ERAM02_Gaindata.root  ERAM03_Gaindata.root  ERAM07_Gaindata_04.root  ERAM09_Gaindata.root  ERAM10_Gaindata_06.root  ERAM11_Gaindata.root  ERAM12_Gaindata.root  ERAM13_Gaindata_09.root  ERAM14_Gaindata_10.root  ERAM15_Gaindata.root  ERAM16_Gaindata_12.root  ERAM17_Gaindata.root  ERAM18_Gaindata_14.root  ERAM19_Gaindata_15.root  ERAM20_Gaindata_16.root  ERAM21_Gaindata.root  ERAM23_Gaindata_18.root  ERAM24_Gaindata_19.root  ERAM26_Gaindata_20.root  ERAM27_Gaindata.root  ERAM28_Gaindata_21.root  ERAM29_Gaindata_22.root  ERAM30_Gaindata.root  ERAM36_Gaindata.root  ERAM37_Gaindata.root  ERAM38_Gaindata.root  ERAM39_Gaindata.root  ERAM40_Gaindata.root  ERAM41_Gaindata.root  ERAM42_Gaindata.root  ERAM43_Gaindata.root  ERAM44_Gaindata.root  ERAM45_Gaindata.root  ERAM46_Gaindata.root  ERAM47_Gaindata.root  ERAM48_Gaindata.root
GainRCMaps/RCfiles/: ERAM01_RCdata_01.root  ERAM02_RCdata.root  ERAM03_RCdata_03.root  ERAM07_RCdata.root  ERAM09_RCdata_05.root  ERAM10_RCdata_06.root  ERAM11_RCdata.root  ERAM12_RCdata_08.root  ERAM13_RCdata.root  ERAM14_RCdata.root  ERAM15_RCdata.root  ERAM16_RCdata_12.root  ERAM17_RCdata_13.root  ERAM18_RCdata_14.root  ERAM19_RCdata.root  ERAM20_RCdata_16.root  ERAM21_RCdata_17.root  ERAM23_RCdata.root  ERAM24_RCdata.root  ERAM26_RCdata.root  ERAM27_RCdata.root  ERAM28_RCdata.root  ERAM29_RCdata_22.root  ERAM30_RCdata_23.root  ERAM36_RCdata.root  ERAM37_RCdata.root  ERAM38_RCdata.root  ERAM39_RCdata.root  ERAM40_RCdata.root  ERAM41_RCdata.root  ERAM42_RCdata.root  ERAM43_RCdata.root  ERAM44_RCdata.root  ERAM45_RCdata.root  ERAM46_RCdata.root  ERAM47_RCdata.root  ERAM48_RCdata.root
Misc/: CMakeLists.txt
Misc/inc/: ParabolaFunction.h  ParabolaFunctionNG.h  Util.h
Misc/src/: FuncFromTGraph.cxx  GaussFunction.cxx  ParabolaFunction.cxx  ParabolaFunctionNG.cxx  SignalTools.cxx  Util.cxx
ModelEvent/: README.md
ModelEvent/inc/: AmplitudeError.h  Cluster.h  Event.h  FitOutput.h  Module.h  Pad.h  ROBoard.h  Sample.h  SetOfTracks.h  TimeError.h  Track.h
ModelEvent/src/: AmplitudeError.cxx  Cluster.cxx  Event.cxx  FitOutput.cxx  Module.cxx  Pad.cxx  ROBoard.cxx  Sample.cxx  SetOfTracks.cxx  TimeError.cxx  Track.cxx
ModelSignal/: README.md
ModelSignal/inc/: Model_Charge0D.h  Model_Charge1D.h  Model_ChargeI.h  Model_Electronics.h  Model_ReadOutGeometry.h
ModelSignal/src/: Model_Charge0D.cxx  Model_Charge1D.cxx  (+3 more)
Reconstruction/: CMakeLists.txt  README.md
Reconstruction/inc/: CombinedFit.h  Control.h  Displays.h  DrawOuts.h  DrawOuts_old.h  LUTs.h  LUTs.hxx  LUTs_LinkDef.h  Monitoring.h  ReconTools.h  Recon_LinkDef.h  Selector.h  Tools.h  Variables.h  dEdx.h  dEdx_LinkDef.h
Reconstruction/src/: CombinedFit.cxx  Control.cxx  Displays.cxx  DrawOuts.cxx  DrawOuts_old.cxx  LUTs.cxx  Monitoring.cxx  ReconTools.cxx  Selector.cxx  Tools.cxx  UseLaterGP.cxx  Variables.cxx  dEdx.cxx  dEdxRecon.code-workspace
SampleTools/: CMakeLists.txt
SampleTools/inc/: GiveMe_Uploader.h  SampleUploader_Data.h  Uploader.h  Uploader_CERN22.h  Uploader_CERN22_V4.h  Uploader_DESY21.h  Uploader_David.h
SampleTools/src/: GiveMe_Uploader.cxx  SampleUploader_Data.cxx  Uploader.cxx  Uploader_CERN22.cxx  Uploader_CERN22_V4.cxx  Uploader_DESY21.cxx  Uploader_David.cxx
SignalModel/: CMakeLists.txt
SignalModel/inc/: Model_Charge0D.h  Model_Charge1D.h  Model_ChargeI.h  Model_Electronics.h  Model_ReadOutGeometry.h
SignalModel/src/: Model_Charge0D.cxx  Model_Charge1D.cxx  Model_ChargeI.cxx  Model_ReadOutGeometry.cxx
Uploader/: README.md
Utilities/: README.md
docs/: README.md
(+6033 files in other folders)
